src/skiacapi/cpp/skiacapi.h

typedef void SkColorSpace;
typedef void SkData;
typedef void SkDynamicMemoryWStream;
typedef void SkRefCnt;
typedef void SkSVGDOM;
// const.cpp

CAPI unsigned char SkColorType_RGBA_F32(void);
CAPI unsigned char SkColorType_A16_unorm(void);
CAPI unsigned char SkAlphaType_Opaque(void);
CAPI unsigned char SkAlphaType_Premul(void);
CAPI unsigned char SkAlphaType_Unpremul(void);
CAPI unsigned char SkTileMode_Clamp(void);
CAPI unsigned char SkTileMode_Decal(void);
CAPI unsigned char SkFilterMode_Nearest(void);
CAPI unsigned char SkFilterMode_Linear(void);
CAPI unsigned char SkPathVerb_Move(void);
CAPI unsigned char SkPathVerb_Line(void);
CAPI unsigned char SkPathVerb_Quad(void);
CAPI unsigned char SkPathVerb_Cubic(void);
CAPI unsigned char SkPathVerb_Close(void);
CAPI unsigned char SkPaintCap_Butt(void);
CAPI unsigned char SkPaintCap_Round(void);
CAPI unsigned char SkPaintCap_Square(void);
CAPI unsigned char SkPaintJoin_Miter(void);
CAPI unsigned char SkPaintJoin_Round(void);
CAPI unsigned char SkPaintJoin_Bevel(void);
CAPI unsigned char SkBlendMode_Clear(void);
CAPI unsigned char SkBlendMode_Src(void);
CAPI unsigned char SkBlendMode_Dst(void);
CAPI unsigned char SkBlendMode_SrcOver(void);
CAPI unsigned char SkBlendMode_DstOver(void);
CAPI unsigned char SkBlendMode_SrcIn(void);
CAPI unsigned char SkBlendMode_DstIn(void);
CAPI unsigned char SkBlendMode_SrcOut(void);
CAPI unsigned char SkBlendMode_DstOut(void);
CAPI unsigned char SkBlendMode_SrcATop(void);
CAPI unsigned char SkBlendMode_DstATop(void);
CAPI unsigned char SkBlendMode_Xor(void);
CAPI unsigned char SkBlendMode_Plus(void);
CAPI unsigned char SkBlendMode_Modulate(void);
CAPI unsigned char SkBlendMode_Screen(void);
CAPI unsigned char SkBlendMode_Overlay(void);
CAPI unsigned char SkBlendMode_Darken(void);
CAPI unsigned char SkBlendMode_Lighten(void);
CAPI unsigned char SkBlendMode_ColorDodge(void);
CAPI unsigned char SkBlendMode_ColorBurn(void);
CAPI unsigned char SkBlendMode_HardLight(void);
CAPI unsigned char SkBlendMode_SoftLight(void);
CAPI unsigned char SkBlendMode_Difference(void);
CAPI unsigned char SkBlendMode_Exclusion(void);
CAPI unsigned char SkBlendMode_Multiply(void);
CAPI unsigned char SkBlendMode_Hue(void);
CAPI unsigned char SkBlendMode_Saturation(void);
CAPI unsigned char SkBlendMode_Color(void);
CAPI unsigned char SkBlendMode_Luminosity(void);
CAPI unsigned char SkGradientShaderInterpolationColorSpace_Destination(void);
CAPI unsigned char SkGradientShaderInterpolationColorSpace_OKLab(void);
CAPI unsigned char SkGradientShaderInterpolationColorSpace_SRGB(void);
CAPI const float* SkNamedTransferFn_SRGB(void);
CAPI const float* SkNamedTransferFn_Rec2020(void);
CAPI const float* SkNamedTransferFn_PQ(void);
CAPI const float* SkNamedTransferFn_HLG(void);
CAPI const float* SkNamedGamut_SRGB(void);
CAPI const float* SkNamedGamut_AdobeRGB(void);
CAPI const float* SkNamedGamut_DisplayP3(void);
CAPI const float* SkNamedGamut_Rec2020(void);
// misc.cpp

CAPI void SkRefCnt_unref(SkRefCnt* object);
CAPI void SkData_unref(SkData* data);
CAPI long long SkData_size(SkData* data);
CAPI const void* SkData_data(SkData* data);
CAPI SkDynamicMemoryWStream* SkDynamicMemoryWStream_New(void);
CAPI void SkDynamicMemoryWStream_delete(SkDynamicMemoryWStream* stream);
CAPI SkData* SkDynamicMemoryWStream_detachAsData(SkDynamicMemoryWStream* stream);
CAPI SkColorSpace* SkColorSpace_MakeRGB(TRC_PARAMETERS, MATRIX33_PARAMETERS);
CAPI SkData* SkICC_SkWriteICCProfile(TRC_PARAMETERS, MATRIX33_PARAMETERS);
// svg.cpp

typedef bool (*loadImage_t)(const char path[], const char name[], const char id[], int* w, int* h, unsigned char* colorType, unsigned char* alphaType, SkColorSpace** colorSpace, void** pixels, long long* rowBytes);
CAPI SkSVGDOM* SkSVGDOM_Make(char* str, long long len, loadImage_t loadImage);
CAPI void SkSVGDOM_containerSize(SkSVGDOM* dom, float wh[2]);