src/main/java/com/loadingbyte/cinecred/natives/skiacapi/constants$0.java


    // Suppresses default constructor, ensuring non-instantiability.
    private constants$0() {}
    static final FunctionDescriptor const$0 = FunctionDescriptor.of(JAVA_BYTE);
    static final MethodHandle const$1 = RuntimeHelper.downcallHandle(
        "SkColorType_RGBA_F32",
        constants$0.const$0
    );
    static final MethodHandle const$2 = RuntimeHelper.downcallHandle(
        "SkColorType_A16_unorm",
        constants$0.const$0
    );
    static final MethodHandle const$3 = RuntimeHelper.downcallHandle(
        "SkAlphaType_Opaque",
        constants$0.const$0
    );
    static final MethodHandle const$4 = RuntimeHelper.downcallHandle(
        "SkAlphaType_Premul",
        constants$0.const$0
    );
    static final MethodHandle const$5 = RuntimeHelper.downcallHandle(
        "SkAlphaType_Unpremul",
        constants$0.const$0
    );
    static final MethodHandle const$6 = RuntimeHelper.downcallHandle(
        "SkTileMode_Clamp",
        constants$0.const$0
    );
    static final MethodHandle const$7 = RuntimeHelper.downcallHandle(
        "SkTileMode_Decal",
        constants$0.const$0
    );
    static final MethodHandle const$8 = RuntimeHelper.downcallHandle(
        "SkFilterMode_Nearest",
        constants$0.const$0
    );
    static final MethodHandle const$9 = RuntimeHelper.downcallHandle(
        "SkFilterMode_Linear",
        constants$0.const$0
    );
    static final MethodHandle const$10 = RuntimeHelper.downcallHandle(
        "SkPathVerb_Move",
        constants$0.const$0
    );
    static final MethodHandle const$11 = RuntimeHelper.downcallHandle(
        "SkPathVerb_Line",
        constants$0.const$0
    );
    static final MethodHandle const$12 = RuntimeHelper.downcallHandle(
        "SkPathVerb_Quad",
        constants$0.const$0
    );
    static final MethodHandle const$13 = RuntimeHelper.downcallHandle(
        "SkPathVerb_Cubic",
        constants$0.const$0
    );
    static final MethodHandle const$14 = RuntimeHelper.downcallHandle(
        "SkPathVerb_Close",
        constants$0.const$0
    );
    static final MethodHandle const$15 = RuntimeHelper.downcallHandle(
        "SkPaintCap_Butt",
        constants$0.const$0
    );
    static final MethodHandle const$16 = RuntimeHelper.downcallHandle(
        "SkPaintCap_Round",
        constants$0.const$0
    );
    static final MethodHandle const$17 = RuntimeHelper.downcallHandle(
        "SkPaintCap_Square",
        constants$0.const$0
    );
    static final MethodHandle const$18 = RuntimeHelper.downcallHandle(
        "SkPaintJoin_Miter",
        constants$0.const$0
    );
    static final MethodHandle const$19 = RuntimeHelper.downcallHandle(
        "SkPaintJoin_Round",
        constants$0.const$0
    );
    static final MethodHandle const$20 = RuntimeHelper.downcallHandle(
        "SkPaintJoin_Bevel",
        constants$0.const$0
    );
    static final MethodHandle const$21 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Clear",
        constants$0.const$0
    );
    static final MethodHandle const$22 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Src",
        constants$0.const$0
    );
    static final MethodHandle const$23 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Dst",
        constants$0.const$0
    );
    static final MethodHandle const$24 = RuntimeHelper.downcallHandle(
        "SkBlendMode_SrcOver",
        constants$0.const$0
    );
    static final MethodHandle const$25 = RuntimeHelper.downcallHandle(
        "SkBlendMode_DstOver",
        constants$0.const$0
    );
    static final MethodHandle const$26 = RuntimeHelper.downcallHandle(
        "SkBlendMode_SrcIn",
        constants$0.const$0
    );
    static final MethodHandle const$27 = RuntimeHelper.downcallHandle(
        "SkBlendMode_DstIn",
        constants$0.const$0
    );
    static final MethodHandle const$28 = RuntimeHelper.downcallHandle(
        "SkBlendMode_SrcOut",
        constants$0.const$0
    );
    static final MethodHandle const$29 = RuntimeHelper.downcallHandle(
        "SkBlendMode_DstOut",
        constants$0.const$0
    );
    static final MethodHandle const$30 = RuntimeHelper.downcallHandle(
        "SkBlendMode_SrcATop",
        constants$0.const$0
    );
    static final MethodHandle const$31 = RuntimeHelper.downcallHandle(
        "SkBlendMode_DstATop",
        constants$0.const$0
    );
    static final MethodHandle const$32 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Xor",
        constants$0.const$0
    );
    static final MethodHandle const$33 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Plus",
        constants$0.const$0
    );
    static final MethodHandle const$34 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Modulate",
        constants$0.const$0
    );
    static final MethodHandle const$35 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Screen",
        constants$0.const$0
    );
    static final MethodHandle const$36 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Overlay",
        constants$0.const$0
    );
    static final MethodHandle const$37 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Darken",
        constants$0.const$0
    );
    static final MethodHandle const$38 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Lighten",
        constants$0.const$0
    );
    static final MethodHandle const$39 = RuntimeHelper.downcallHandle(
        "SkBlendMode_ColorDodge",
        constants$0.const$0
    );
    static final MethodHandle const$40 = RuntimeHelper.downcallHandle(
        "SkBlendMode_ColorBurn",
        constants$0.const$0
    );
    static final MethodHandle const$41 = RuntimeHelper.downcallHandle(
        "SkBlendMode_HardLight",
        constants$0.const$0
    );
    static final MethodHandle const$42 = RuntimeHelper.downcallHandle(
        "SkBlendMode_SoftLight",
        constants$0.const$0
    );
    static final MethodHandle const$43 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Difference",
        constants$0.const$0
    );
    static final MethodHandle const$44 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Exclusion",
        constants$0.const$0
    );
    static final MethodHandle const$45 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Multiply",
        constants$0.const$0
    );
    static final MethodHandle const$46 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Hue",
        constants$0.const$0
    );
    static final MethodHandle const$47 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Saturation",
        constants$0.const$0
    );
    static final MethodHandle const$48 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Color",
        constants$0.const$0
    );
    static final MethodHandle const$49 = RuntimeHelper.downcallHandle(
        "SkBlendMode_Luminosity",
        constants$0.const$0
    );
    static final MethodHandle const$50 = RuntimeHelper.downcallHandle(
        "SkGradientShaderInterpolationColorSpace_Destination",
        constants$0.const$0
    );
    static final MethodHandle const$51 = RuntimeHelper.downcallHandle(
        "SkGradientShaderInterpolationColorSpace_OKLab",
        constants$0.const$0
    );
    static final MethodHandle const$52 = RuntimeHelper.downcallHandle(
        "SkGradientShaderInterpolationColorSpace_SRGB",
        constants$0.const$0
    );
    static final FunctionDescriptor const$53 = FunctionDescriptor.of(RuntimeHelper.POINTER);
    static final MethodHandle const$54 = RuntimeHelper.downcallHandle(
        "SkNamedTransferFn_SRGB",
        constants$0.const$53
    );
    static final MethodHandle const$55 = RuntimeHelper.downcallHandle(
        "SkNamedTransferFn_Rec2020",
        constants$0.const$53
    );
    static final MethodHandle const$56 = RuntimeHelper.downcallHandle(
        "SkNamedTransferFn_PQ",
        constants$0.const$53
    );
    static final MethodHandle const$57 = RuntimeHelper.downcallHandle(
        "SkNamedTransferFn_HLG",
        constants$0.const$53
    );
    static final MethodHandle const$58 = RuntimeHelper.downcallHandle(
        "SkNamedGamut_SRGB",
        constants$0.const$53
    );
    static final MethodHandle const$59 = RuntimeHelper.downcallHandle(
        "SkNamedGamut_AdobeRGB",
        constants$0.const$53
    );
    static final MethodHandle const$60 = RuntimeHelper.downcallHandle(
        "SkNamedGamut_DisplayP3",
        constants$0.const$53
    );
    static final MethodHandle const$61 = RuntimeHelper.downcallHandle(
        "SkNamedGamut_Rec2020",
        constants$0.const$53
    );
    static final FunctionDescriptor const$62 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$63 = RuntimeHelper.downcallHandle(
        "SkRefCnt_unref",
        constants$0.const$62
    );
    static final MethodHandle const$64 = RuntimeHelper.downcallHandle(
        "SkData_unref",
        constants$0.const$62
    );
    static final FunctionDescriptor const$65 = FunctionDescriptor.of(JAVA_LONG,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$66 = RuntimeHelper.downcallHandle(
        "SkData_size",
        constants$0.const$65
    );
    static final FunctionDescriptor const$67 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$68 = RuntimeHelper.downcallHandle(
        "SkData_data",
        constants$0.const$67
    );
    static final MethodHandle const$69 = RuntimeHelper.downcallHandle(
        "SkDynamicMemoryWStream_New",
        constants$0.const$53
    );
    static final MethodHandle const$70 = RuntimeHelper.downcallHandle(
        "SkDynamicMemoryWStream_delete",
        constants$0.const$62
    );
    static final MethodHandle const$71 = RuntimeHelper.downcallHandle(
        "SkDynamicMemoryWStream_detachAsData",
        constants$0.const$67
    );
    static final FunctionDescriptor const$72 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT,
        JAVA_FLOAT
    );
    static final MethodHandle const$73 = RuntimeHelper.downcallHandle(
        "SkColorSpace_MakeRGB",
        constants$0.const$72
    );
    static final MethodHandle const$74 = RuntimeHelper.downcallHandle(
        "SkICC_SkWriteICCProfile",
        constants$0.const$72
    );
    static final FunctionDescriptor const$75 = FunctionDescriptor.of(JAVA_BOOLEAN,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$76 = RuntimeHelper.upcallHandle(loadImage_t.class, "apply", constants$0.const$75);
    static final MethodHandle const$77 = RuntimeHelper.downcallHandle(
        constants$0.const$75
    );
    static final FunctionDescriptor const$78 = FunctionDescriptor.of(RuntimeHelper.POINTER,
        RuntimeHelper.POINTER,
        JAVA_LONG,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$79 = RuntimeHelper.downcallHandle(
        "SkSVGDOM_Make",
        constants$0.const$78
    );
    static final FunctionDescriptor const$80 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        RuntimeHelper.POINTER
    );
    static final MethodHandle const$81 = RuntimeHelper.downcallHandle(
        "SkSVGDOM_containerSize",
        constants$0.const$80
    );
    static final FunctionDescriptor const$82 = FunctionDescriptor.ofVoid(
        RuntimeHelper.POINTER,
        JAVA_FLOAT,
        JAVA_FLOAT
    );
